--- a/style.css
+++ b/style.css
@@ -695,8 +695,14 @@ ol li ol li ol {
     background-color: rgba(255, 255, 255, 0.64);
 }
 .block[data-taxon="Exercise"]:hover {
-    background-color: rgba(255, 215, 45, 0.19);
+    background-color: rgba(255, 215, 45, 0.22);
 }
 .block[data-taxon="Exercise"] {
-    background-color: rgba(255, 215, 45, 0.08);
+    background-color: rgba(255, 215, 45, 0.12);
+}
+.block[data-taxon="Solution"]:hover {
+    background-color: rgba(255, 255, 255, 0.32);
+}
+.block[data-taxon="Solution"] {
+    background-color: rgba(255, 255, 255, 0.64);
 }
