--- a/style.css
+++ b/style.css
@@ -705,6 +705,12 @@ ol li ol li ol {
 .block[data-taxon="Theorem"] {
     background-color: rgba(100, 100, 255, 0.08);
 }
+.block[data-taxon="Lemma"]:hover {
+    background-color: rgba(100, 229, 255, 0.16);
+}
+.block[data-taxon="Lemma"] {
+    background-color: rgba(100, 229, 255, 0.08);
+}
 .block[data-taxon="Proof"]:hover {
     background-color: rgba(255, 255, 255, 0.32);
 }
